Update mapping for client and workflow types

--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -43,6 +43,13 @@
                         }
                     }
                 },
+                "workflows": {
+                    "properties": {
+                        "id": {
+                            "type": "long"
+                        }
+                    }
+                },
                 "users": {
                     "properties": {
                         "id": {
@@ -1178,6 +1185,22 @@
                 },
                 "active": {
                     "type": "boolean"
+                },
+                "client": {
+                    "properties": {
+                        "id": {
+                            "type": "long"
+                        },
+                        "name": {
+                            "type": "text",
+                            "fields": {
+                                "keyword": {
+                                    "type": "keyword",
+                                    "ignore_above": 256
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
