--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -11,6 +11,7 @@
 # Absolute path to the directory that process directories will be created in,
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
+directory.messages=src/test/resources/custom/
 directory.metadata=src/test/resources/
 directory.rulesets=src/test/resources/rulesets/
 # Absolute path to the directory that XSLT files are stored in which are used
