--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -596,7 +596,7 @@ elasticsearch.password=kitodo
 # =============================================================================
 
 # -----------------------------------
-# ImageManagementModule
+# ImageManagement
 # -----------------------------------
 
 # If ImageMagick is not on the PATH, or the convert command is hidden by
@@ -604,32 +604,32 @@ elasticsearch.password=kitodo
 # you can manually set the ImageMagick search path here. (This is mainly a
 # problem in Windows environments.)
 
-#ImageManagementModule.searchPath=C:\\Program Files\\ImageMagick-7.0.7-Q16
+#ImageManagement.searchPath=C:\\Program Files\\ImageMagick-7.0.7-Q16
 
-# If the ImageManagementModule needs to temporarily write files, you can set
-# the directory to use here:
+# If the ImageManagement needs to temporarily write files, you can set the
+# directory to use here:
 
-#ImageManagementModule.tmpDir=/tmp/
+#ImageManagement.tmpDir=/tmp/
 
-# The ImageManagementModule.param.* section can be used to pass arbitrary
-# parameters to ImageMagick. You can set limits here. For a description, see:
+# The ImageManagement.param.* section can be used to pass arbitrary parameters
+# to ImageMagick. You can set limits here. For a description, see:
 # https://www.imagemagick.org/script/command-line-options.php?#limit
 
-#ImageManagementModule.param.limit.map=40MB
-#ImageManagementModule.param.limit.memory=40MB
+#ImageManagement.param.limit.map=40MB
+#ImageManagement.param.limit.memory=40MB
 
 # Timeout for a singular ImageMagick operation in seconds. Defaults to 2 hours.
 
-#ImageManagementModule.timeoutSec=7200
+#ImageManagement.timeoutSec=7200
 
 # ImageMagick can be executed remotely using SSH. You can list several hosts
 # here, separated by comma. Key-based authentication must be properly set up.
 # File system paths must be (mounted) equally on the remote machine(s).
 
-#ImageManagementModule.sshHosts=user@rhost1.kitodo.org,user@rhost2.kitodo.org
+#ImageManagement.sshHosts=user@rhost1.kitodo.org,user@rhost2.kitodo.org
 
 # -----------------------------------
-# LongTimePreservationValidatiuon
+# LongTermPreservationValidatiuon
 # -----------------------------------
 
 # Maps the output parameter of the JHove process to the interface parameters of
