--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -49,9 +49,9 @@
             <version>3.0.0-beta.2-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.kitodo</groupId>
-            <artifactId>kitodo-ugh</artifactId>
-            <version>3.0-SNAPSHOT</version>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>com.ibm.icu</groupId>
@@ -713,15 +713,6 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.2.2</version>
                 <configuration>
-                    <webResources>
-                        <resource>
-                            <directory>${parent.basedir}/OpacPica-Plugin/target</directory>
-                            <targetPath>plugins/opac</targetPath>
-                            <includes>
-                                <include>*.jar</include>
-                            </includes>
-                        </resource>
-                    </webResources>
                     <archive>
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
