Fix exportMetsIT tests.

--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -47,7 +47,7 @@ directory.users=src/test/resources/users/
 
 metsEditor.lockingTime=2
 
-copyData.onExport=/@GoobiIdentifier \= $process.id;
+#copyData.onExport=/@GoobiIdentifier \= $process.id;
 
 LongTermPreservationValidation.mapping.FALSE.FALSE=ERROR
 LongTermPreservationValidation.mapping.FALSE.TRUE=ERROR
