--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -133,11 +133,6 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.1.1</version>
-        </dependency>
-        <dependency>
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
             <version>3.2</version>
@@ -176,6 +171,10 @@
                 <exclusion>
                     <groupId>commons-cli</groupId>
                     <artifactId>commons-cli</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.xmlgraphics</groupId>
+                    <artifactId>fop</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -338,11 +337,6 @@
             <artifactId>rxjava</artifactId>
             <version>2.1.3</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
         <!-- needed for logging in web context -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -406,7 +400,7 @@
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>fop</artifactId>
-            <version>2.0</version>
+            <version>${org.apache.xmlgraphics.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.xmlgraphics</groupId>
@@ -416,12 +410,16 @@
                     <groupId>commons-io</groupId>
                     <artifactId>commons-io</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>xmlgraphics-commons</artifactId>
-            <version>2.0</version>
+            <version>${org.apache.xmlgraphics.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
