Use async indexing in IndexingForm and split IndexWorkers on smaller

--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -335,7 +335,13 @@
                     "type": "long"
                 },
                 "processBaseUri": {
-                    "type": "long"
+                    "type": "text",
+                    "fields": {
+                        "keyword": {
+                            "type": "keyword",
+                            "ignore_above": 256
+                        }
+                    }
                 },
                 "project": {
                     "properties": {
@@ -475,9 +481,6 @@
                     "ignore_malformed": true
                 },
                 "docket": {
-                    "type": "long"
-                },
-                "processBaseUri": {
                     "type": "long"
                 },
                 "projects": {
