--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -541,6 +541,12 @@ showOcrButton=false
 # Base path to OCR, without parameters
 ocrUrl=
 
+# -----------------------------------
+# Display process properties
+# -----------------------------------
+
+# Process properties to be displayed in process list
+processProperties=
 
 # -----------------------------------
 # ActiveMQ web services
