--- a/Kitodo-PersistentIdentifier/pom.xml
+++ b/Kitodo-PersistentIdentifier/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>kitodo-production</artifactId>
         <groupId>org.kitodo</groupId>
-        <version>3.0.0-beta.1-SNAPSHOT</version>
+        <version>3.0.0-beta.2</version>
     </parent>
     <organization>
         <name>kitodo.org</name>
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>org.kitodo</groupId>
             <artifactId>kitodo-api</artifactId>
-            <version>3.0.0-beta.1-SNAPSHOT</version>
+            <version>3.0.0-beta.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
