--- a/Kitodo-Validation/pom.xml
+++ b/Kitodo-Validation/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>kitodo-production</artifactId>
         <groupId>org.kitodo</groupId>
-        <version>3.0.0-beta.1-SNAPSHOT</version>
+        <version>3.0.0-beta.2</version>
     </parent>
     <organization>
         <name>kitodo.org</name>
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>org.kitodo</groupId>
             <artifactId>kitodo-api</artifactId>
-            <version>3.0.0-beta.1-SNAPSHOT</version>
+            <version>3.0.0-beta.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
