--- a/Kitodo-API/pom.xml
+++ b/Kitodo-API/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <artifactId>kitodo-production</artifactId>
         <groupId>org.kitodo</groupId>
-        <version>3.0.0-beta.2</version>
+        <version>3.0.0-beta.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
