--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.kitodo</groupId>
         <artifactId>kitodo-production</artifactId>
-        <version>3.0.0-beta.2</version>
+        <version>3.0.0-beta.2-SNAPSHOT</version>
     </parent>
     <organization>
         <name>kitodo.org</name>
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.kitodo</groupId>
             <artifactId>kitodo-data-management</artifactId>
-            <version>3.0.0-beta.2</version>
+            <version>3.0.0-beta.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.kitodo</groupId>
