Parameterize timeout for renaming to shorten tests

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -648,3 +648,6 @@ LongTermPreservationValidation.mapping.TRUE.UNDETERMINED=SUCCESS
 LongTermPreservationValidation.mapping.UNDETERMINED.FALSE=ERROR
 LongTermPreservationValidation.mapping.UNDETERMINED.TRUE=SUCCESS
 LongTermPreservationValidation.mapping.UNDETERMINED.UNDETERMINED=WARNING
+
+file.maxWaitMilliseconds=150000
+
