--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -58,3 +58,6 @@ LongTermPreservationValidation.mapping.TRUE.UNDETERMINED=SUCCESS
 LongTermPreservationValidation.mapping.UNDETERMINED.FALSE=ERROR
 LongTermPreservationValidation.mapping.UNDETERMINED.TRUE=SUCCESS
 LongTermPreservationValidation.mapping.UNDETERMINED.UNDETERMINED=WARNING
+
+file.maxWaitMilliseconds=3000
+
