Update migration file and configuration key in Kitodo configuration file for custom columns

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -545,8 +545,8 @@ ocrUrl=
 # Display process properties
 # -----------------------------------
 
-# Process properties to be displayed in process list
-processProperties=
+# Process properties to be displayed in process list as custom columns
+processPropertyColumns=
 
 # -----------------------------------
 # ActiveMQ web services
