--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -184,6 +184,11 @@
             <version>7.8.0</version>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+        <dependency>
             <groupId>org.passay</groupId>
             <artifactId>passay</artifactId>
             <version>1.3.1</version>
