Update mapping for meta.xml

--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -343,6 +343,10 @@
                         }
                     }
                 },
+                "meta.xml": {
+                    "dynamic": "false",
+                    "type": "object"
+                },
                 "project": {
                     "properties": {
                         "id": {
