Add configurable metadata languages

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -182,6 +182,7 @@ directory.messages=/usr/local/kitodo/messages/
 # Default language: If no Accept-Language Http Request header is present, use the following language:
 language.default=de
 
+metadataLanguage.list=Deutsch-de&English-en
 
 # -----------------------------------
 # Data protection
