--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -34,6 +34,8 @@ script_createSymLink=src/test/resources/scripts/script_createSymLink.sh
 script_deleteSymLink=src/test/resources/scripts/script_deleteSymLink.sh
 # Prefix for image names as regex.
 image.prefix=.*
+
+metadataLanguage.list=Deutsch-de&English-en
 # -----------------------------------
 # backup of metadata configuration
 # -----------------------------------
