--- a/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
@@ -57,13 +57,13 @@ directory.users=../../../../src/test/resources/users/
 # Absolute path to a folder the application can temporarily create files in,
 # terminated by a directory separator ("/").
 directory.temp=../../../resources/tmp/
+
+metadataLanguage.list=Deutsch-de&English-en
+
 # -----------------------------------
 # Directory management
 # -----------------------------------
 # OrigOrdner anlegen, wenn nicht vorhanden
-createOrigFolderIfNotExists=true
-# indicates whether the source folder should be created automatically or not, default is false
-createSourceFolder=false
 DIRECTORY_PREFIX=master
 DIRECTORY_SUFFIX=media
 importUseOldConfiguration=false
